<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewAlarm">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutAddAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/discardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_discard"
            android:textAllCaps="false"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addAlarmTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_alarm"
            android:textStyle="bold"
            android:textSize="@dimen/title_txt_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_save"
            android:textAllCaps="false"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutNumberPickers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutAddAlarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <NumberPicker
            android:id="@+id/hourNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/minuteNumberPicker"
            />
        <NumberPicker
            android:id="@+id/minuteNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/hourNumberPicker"
            app:layout_constraintEnd_toStartOf="@+id/amPmNumberPicker"
            />
        <NumberPicker
            android:id="@+id/amPmNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/minuteNumberPicker"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutNumberPickers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/daysChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.92"
            app:singleLine="true"
            app:singleSelection="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.chip.Chip
                android:id="@+id/sundayChip"
                android:text="@string/txt_sunday"
                style="@style/rounded_smaller_chips"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/mondayChip"
                android:text="@string/txt_monday"
                style="@style/rounded_smaller_chips"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/tuesdayChip"
                android:text="@string/txt_tuesday"
                style="@style/rounded_smaller_chips"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/wednesdayChip"
                android:text="@string/txt_wednesday"
                style="@style/rounded_smaller_chips"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/thursdayChip"
                android:text="@string/txt_thursday"
                style="@style/rounded_smaller_chips"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/fridayChip"
                android:text="@string/txt_friday"
                style="@style/rounded_smaller_chips"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/saturdayChip"
                android:text="@string/txt_saturday"
                style="@style/rounded_smaller_chips"
                />
        </com.google.android.material.chip.ChipGroup>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/labelEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.92"
            android:hint="@string/txt_label"
            android:padding="6dp"
            android:background="@color/transparent"
            android:textSize="19sp"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/text_view_margin_top"
            android:drawableEnd="@drawable/baseline_navigate_next_24"
            android:drawablePadding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/daysChipGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ringtoneTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.92"
            android:text="@string/txt_ringtone"
            android:drawableStart="@drawable/outline_notifications_active_24"
            android:drawablePadding="10dp"
            android:padding="6dp"
            android:background="@color/transparent"
            android:textSize="19sp"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/text_view_margin_top"
            app:layout_constraintTop_toBottomOf="@id/labelEditText"
            app:layout_constraintStart_toStartOf="@id/labelEditText"
            app:layout_constraintEnd_toEndOf="@id/labelEditText"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/alertModeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.92"
            android:text="@string/txt_alert_mode"
            android:drawableStart="@drawable/outline_vibration_24"
            android:drawablePadding="10dp"
            android:padding="6dp"
            android:background="@color/transparent"
            android:textSize="19sp"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/text_view_margin_top"
            app:layout_constraintTop_toBottomOf="@id/ringtoneTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>